UZSU: added buttons to delete and deactivate entries

--- a/base.html
+++ b/base.html
@@ -150,6 +150,7 @@
             </ul>
         </div>
         <div class="add"><span>ADD</span></div>
+        <div><span><a data-role="button" class="activate" data-icon="check" data-iconpos="notext"></a></span></div> 
         <div class="right ok"><span>OK</span></div>
         <div class="right close"><span>ESC</span></div>
     </div>    
